Examples/_ch147_signcmp_warn.txt
Examples/_ch147_signcmp.cpp: In function 'void f(const std::vector<int>&, int)':
Examples/_ch147_signcmp.cpp:4:11: warning: comparison of integer expressions of different signedness: 'int' and 'std::vector<int>::size_type' {aka 'long long unsigned int'} [-Wsign-compare]
    4 |     if (n < v.size())           // int 与 size_t 比较
      |         ~~^~~~~~~~~~
Assembler messages:
Fatal error: can't create /tmp/tmp.Sv8ZeW1csS/_ch147_signcmp.o: No such file or directory
